test/parse/module/bad-memory-segment-address.txt
;;; ERROR: 1
(module
  (memory 100)
  (data foo))
(;; STDERR ;;;
out/test/parse/module/bad-memory-segment-address.txt:4:9: error: unexpected token "foo"
  (data foo))
        ^^^
out/test/parse/module/bad-memory-segment-address.txt:4:12: error: syntax error, unexpected ), expecting ( or NAT or VAR
  (data foo))
           ^
;;; STDERR ;;)
